My fourth commit

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -3,5 +3,5 @@
 body {
     background-color: #99bbff;
     margin-top: 50px;
-    font-family: 'Lato';
-};
+    font-family: 'Lato', sans-serif;
+}
